<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    android:paddingLeft="6dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/vendincard"
        android:layout_width="368dp"
        android:layout_height="96dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="606dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="99dp"
                android:layout_height="64dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="14dp"
                android:contentDescription="@string/vending_list"
                android:padding="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/medicinename"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/priceVending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="154dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="27dp"
                android:gravity="center"
                android:text="@string/_5_rs"
                android:textColor="#167504"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cartvending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/medicinename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="167dp"
                android:fontFamily="@font/abeezee"
                android:gravity="center"
                android:text="@string/medicinename"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <TextView
                android:id="@+id/cartvending"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/vendingbutton"
                android:elevation="5dp"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/priceVending"
                app:layout_constraintStart_toStartOf="@+id/priceVending"
                app:layout_constraintTop_toBottomOf="@+id/priceVending" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>