<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="135dp"
        android:layout_height="129dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="586dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_mipmap"
        android:contentDescription="Icon"/>

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="487dp"

        android:layout_marginBottom="98dp"
        android:background="@drawable/vendingbutton"
        app:cardBackgroundColor="#C4EBE7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="131dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="155dp"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/sign_up"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="136dp"
                android:layout_marginEnd="17dp"
                android:fontFamily="@font/aoboshi_one"
                android:text="@string/name"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="Name"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/PassText2"
                app:layout_constraintStart_toStartOf="@+id/PassText2"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="34dp"

                android:layout_marginEnd="21dp"
                android:fontFamily="@font/aoboshi_one"
                android:text="@string/email"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/PassText2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <EditText
                android:id="@+id/PassText2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="xyz@gmail.com"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/PassText21"
                app:layout_constraintStart_toStartOf="@+id/PassText21"
                app:layout_constraintTop_toBottomOf="@+id/Name" />

            <TextView
                android:id="@+id/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"

                android:layout_marginEnd="31dp"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/aoboshi_one"
                android:text="Pass:"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/textView141"
                app:layout_constraintEnd_toStartOf="@+id/PassText2"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/PassText21"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:hint="Set password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/PassText22"
                app:layout_constraintEnd_toEndOf="@+id/PassText22"
                app:layout_constraintStart_toStartOf="@+id/PassText22" />

            <TextView
                android:id="@+id/textView141"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="17dp"

                android:layout_marginBottom="134dp"
                android:fontFamily="@font/aoboshi_one"
                android:text="Confirm:"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/PassText2"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/PassText22"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="Confirm password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/button6"
                app:layout_constraintStart_toStartOf="@+id/button6"
                app:layout_constraintTop_toBottomOf="@+id/PassText21" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="42dp"
                android:background="@drawable/login"
                android:text="Join"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PassText22"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>